test/conformance/chainsaw/reports/background/exception-with-conditions/exception.yaml
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: container-exception
spec:
  exceptions:
  - policyName: max-containers
    ruleNames:
    - max-two-containers
  match:
    any:
    - resources:
        kinds:
        - Pod
  conditions:
    any:
    - key: "{{ request.object.metadata.labels.color || '' }}"
      operator: Equals
      value: blue
