test/conformance/chainsaw/reports/background/exception-with-conditions/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
