test/conformance/chainsaw/reports/background/exception-with-conditions/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apps
  labels:
    color: blue
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "1"
          memory: "256Mi"
        requests:
          cpu: "0.5"
          memory: "128Mi"
    - name: redis-container
      image: redis:latest
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: "0.5"
          memory: "512Mi"
        requests:
          cpu: "0.25"
          memory: "256Mi"
    - name: busybox-container
      image: busybox:latest
      command: ["/bin/sh", "-c", "while true; do echo 'Hello from BusyBox'; sleep 10; done"]
      resources:
        limits:
          cpu: "0.5"
          memory: "128Mi"
        requests:
          cpu: "0.25"
          memory: "64Mi"
