test/conformance/chainsaw/reports/background/exception-with-conditions/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: max-containers
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
