test/conformance/chainsaw/reports/background/exception-with-conditions/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: dev-ns
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: new-deployment
results:
- policy: check-deployment-replicas
  result: skip
  rule: check-deployment-replicas
  scored: true
  source: kyverno
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: new-deployment
  namespace: dev-ns
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 1
  warn: 0
